--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <span class="para1">bonj</span> <span class="para2">bonj</span>
     <div class="divmere1">
     <img class="img0" src="./public/assets/DG.jpeg" alt="erreur d'ouverture d'image 1" >
-    <img class="img1" src="./public/assets/G.png" alt="erreur d'ouverture d'image 2"/>
-    <img class="img2" src="./public/assets/G1.jpeg" alt="erreur d'ouverture d'image 3"/>
-    <img class="img3" src="./public/assets/GB2.png" alt="erreur d'ouverture d'image 4"/>
+    <img class="img1" src="./public/assets/G.png" alt="erreur d'ouverture d'image 2">
+    <img class="img2" src="./public/assets/G1.jpeg" alt="erreur d'ouverture d'image 3">
+    <img class="img3" src="./public/assets/GB2.png" alt="erreur d'ouverture d'image 4">
     <img class="img4" src="./public/assets/V.jpeg" alt="erreur d'ouverture d'image 5">
     </div>
     <audio class="aud11" src="./public/assets/Tays ft. Mazza L20 - Bonjour [Music Video] _ GRM Daily.mp3" controls="bnj bnj "> </audio> 
@@ -40,3 +40,5 @@
     <li class="li1"> picture</li>
     <li class="li1"> memories</li>
 </ul>
+
+<img class="imgserpent" src="./public/assets/serpent.png" alt="serpent" >
